public-info/src/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-info
spec:
  replicas: 2
  selector:
    matchLabels:
      app: public-info
  template:
    metadata:
      labels:
        app: public-info
    spec:
      containers:
        - name: public-info
          image: public-info:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
