public-info/src/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: public-info
spec:
  selector:
    app: public-info
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
