public-info/src/k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-info-ingress
spec:
  rules:
    - host: public-info.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: public-info
                port:
                  number: 80
